# embedded-rotary-encoder

./: .gitignore  Cargo.toml  readme.md
examples/arduino/: .gitignore  Cargo.toml  avr_hw_simulate.pdsprj  readme.md
examples/arduino/.cargo/: config.toml
examples/stm/: Cargo.toml  memory.x  stm32f401_simulate.pdsprj
examples/stm/.cargo/: config.toml
src/: lib.rs  rotaryencoder.rs
